fix issues with masthead on mobile

--- a/styles/includes/agenda.less
+++ b/styles/includes/agenda.less
@@ -38,7 +38,7 @@
     @media (max-width: @mobile-width-contraint-landscape) and (orientation: landscape) {
       width: @mobile-width;
       padding-bottom: 1.5rem;
-      margin-bottom: 1.8rem;
+      padding-top: 1.5rem;
     }
 
     @media (max-width: @mobile-width-contraint) and (orientation: portrait) {
