--- a/styles/includes/header.less
+++ b/styles/includes/header.less
@@ -8,6 +8,10 @@ header {
     display: none;
   }
 
+  @media (max-width: @mobile-width-contraint-landscape) and (orientation: landscape) {
+    display: none;
+  }
+
   #toggler {
     display: none;
   }
