--- a/styles/includes/masthead.less
+++ b/styles/includes/masthead.less
@@ -35,6 +35,11 @@
     }
   }
 
+  @media (max-width: @mobile-width-contraint-landscape) and (orientation: landscape) {
+    padding-top: 8vh;
+    height: 92vh;
+  }
+
   h4 {
     font-weight: normal;
     margin-bottom: 0;
@@ -51,13 +56,17 @@
   }
   h2 {
     text-transform: uppercase;
-    font-size: 3rem;
+    font-size: 5rem;
     letter-spacing: -0.15rem;
     margin: 0.3rem 0 0;
 
     @media (max-width: @mobile-width-contraint-landscape) and (orientation: landscape) {
       font-size: 2.5rem;
       margin-top: 0.1rem;
+    }
+
+    @media (max-width: @tablet-width-contraint) and (orientation: portrait) {
+      font-size: 4rem;
     }
 
     @media (max-width: @mobile-width-contraint) and (orientation: portrait) {
@@ -68,12 +77,15 @@
   h3 {
     font-weight: normal;
     margin: 0.2rem 0 0;
-    font-size: 1.4rem;
-    opacity: 0.6;
+    font-size: 1.9rem;
 
     @media (max-width: @mobile-width-contraint-landscape) and (orientation: landscape) {
       font-size: 1rem;
       margin-top: 0.1rem;
+    }
+
+    @media (max-width: @tablet-width-contraint) and (orientation: portrait) {
+      font-size: 1.8rem;
     }
 
     @media (max-width: @mobile-width-contraint) and (orientation: portrait) {
@@ -104,7 +116,7 @@
       margin: 0;
       font-size: 0.7rem;
       opacity: 0.5;
-      margin-bottom: 1rem;
+      margin-bottom: 0;
 
       @media (max-width: @mobile-width-contraint-landscape) and (orientation: landscape) {
         margin-bottom: 0.5rem;
@@ -189,6 +201,10 @@
     opacity: 0.5;
 
     @media (max-width: @mobile-width-contraint) and (orientation: portrait) {
+      display: block;
+    }
+
+    @media (max-width: @mobile-width-contraint-landscape) and (orientation: landscape) {
       display: block;
     }
   }
